refactor: rename to "retry-cmd"

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ env_list =
     py{38,39,310,311}
 
 [base]
-source_files = retry_cli.py tests/test_retry_cli.py
+source_files = retry_cmd.py tests/test_retry_cmd.py
 
 [testenv]
 description = run tests
