--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ env_list =
     py{38,39,310,311}
 
 [base]
-source_files = retry_cmd.py tests/test_retry_cmd.py
+source_files = recur.py tests/test_recur.py
 
 [testenv]
 description = run tests
