build(tox): test without Poetry
It is not like we have runtime dependencies. This should fix Windows
CI, where Poetry fails (hehe). This is probably due to
https://github.com/python-poetry/poetry/issues/1917. Workarounds
suffested in the comments do not seem to work. Rather than spend more
time on this, let's test without Poetry.

--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,9 @@ source_files = recur.py tests/test_recur.py
 description = run tests
 allowlist_externals = poetry
 commands_pre =
-    poetry install --no-root --sync
+    pip install pytest
 commands =
-    poetry run pytest
+    pytest
 
 [testenv:lint]
 description = run linters
