--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ black = "^23.7.0"
 pytest = "^7.4.0"
 pyright = "^1.1.324"
 ruff = "^0.0.286"
+nox = "^2023.4.22"
 
 [build-system]
 requires = ["poetry-core"]
