feat(cli): add option `-c`/`--condition`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+simpleeval = "^0.9.13"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
