build(ruff): disable McCabe complexity checking

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ select = [
   "B",     # flake8-bugbear
   "BLE",   # flake8-blind-except
   "C4",    # flake8-comprehensions
-  "C90",   # mccabe
+  # "C90", # mccabe
   "COM",   # flake8-commas
   "CPY",   # flake8-copyright
   "DJ",    # flake8-django
