--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ simpleeval = "^0.9.13"
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
 pytest = "^7.4.0"
-pyright = "^1.1.324"
-ruff = "^0.0.291"
+pyright = "1.1.329"
+ruff = "0.0.292"
 nox = "^2023.4.22"
 
 [build-system]
