--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,8 @@ black = "^23.7.0"
 pytest = "^7.4.0"
 pyright = "1.1.329"
 ruff = "0.0.292"
-nox = "^2023.4.22"
+nox = "2023.4.22"
+nox-poetry = "1.0.3"
 
 [build-system]
 requires = ["poetry-core"]
