build(tasks): add `recur` command
Not `run`:
`poe recur` will come up in shell history searches for `recur`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,10 @@ help = "Run Black"
 cmd = "ruff check ${PYTHON_SOURCES}"
 help = "Run Ruff"
 
+[tool.poe.tasks.recur]
+cmd = "python recur.py"
+help = "Run recur"
+
 [tool.poe.tasks.test]
 cmd = "pytest"
 help = "Run Pytest (not through nox)"
