--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: POSIX",
   "Operating System :: Microsoft :: Windows",
+  "Programming Language :: Python :: 3",
   "Topic :: Utilities",
 ]
 
