--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ classifiers = [
   "Development Status :: 3 - Alpha",
   "Environment :: Console",
   "License :: OSI Approved :: MIT License",
-  "Operating System :: POSIX",
+  "Operating System :: MacOS :: MacOS X",
   "Operating System :: Microsoft :: Windows",
+  "Operating System :: POSIX",
   "Programming Language :: Python :: 3",
   "Topic :: Utilities",
 ]
