--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,6 @@ description = "Retry a command with exponential backoff and jitter."
 authors = ["D. Bohdan <dbohdan@dbohdan.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [
-  { include = "recur.py" }
-]
 repository = "https://gitlab.com/dbohdan/recur"
 keywords = [
   "retry",
@@ -24,6 +21,7 @@ classifiers = [
 ]
 
 include = [
+  { path = "LICENSE", format = "sdist" },
   { path = "noxfile.py", format = "sdist" },
   { path = "tests/", format = "sdist" },
 ]
@@ -45,10 +43,10 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-recur = 'recur:main'
+recur = 'recur_command.main:main'
 
 [tool.poe.env]
-"PYTHON_SOURCES" = "noxfile.py recur.py tests"
+"PYTHON_SOURCES" = "noxfile.py src tests"
 
 [tool.poe.tasks.check]
 sequence = ["format", "lint", "type"]
@@ -68,7 +66,7 @@ cmd = "ruff check ${PYTHON_SOURCES}"
 help = "Run Ruff"
 
 [tool.poe.tasks.recur]
-cmd = "python recur.py"
+cmd = "python -m recur_command"
 help = "Run recur"
 
 [tool.poe.tasks.test]
@@ -152,7 +150,7 @@ ignore = [
 target-version = "py38"
 
 [tool.ruff.per-file-ignores]
-"recur.py" = [
+"src/recur_command/main.py" = [
   "PERF203", # try-except-in-loop
   "S311",    # suspicious-non-cryptographic-random-usage
   "S603",    # subprocess-without-shell-equals-true
