--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pyright = "1.1.329"
 ruff = "0.1.11"
 nox = "2023.4.22"
 shiv = "^1.0.4"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
