build: migrate from Poetry to uv
Choose Hatchling as the new build system.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-/attic
-__pycache__
-/.tox
+/attic/
+/.nox/
+/.tox/
+/.venv/
+
+.coverage
+.mypy*
+.pytest*
+.python-version
+.ruff*
+
+__pycache__/
+
+*.pyz
