feat!: port to Go
Replace simpleeval with starlark-go.

Make exponential backoff start at exponent 1 on the second attempt.
It starts at 2.

Switch to adding the fixed delay to the exponential backoff.
We currently multiply them.
This behavior surprised me
when I used recur after a break.
If someone really wants a multiplier,
we can add one separately.

Add the CLI option `-w`/`--timeout`.

Add more messages in verboae mode.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
 /attic/
-/.nox/
-/.tox/
-/.venv/
 
-.coverage
-.mypy*
-.pytest*
-.python-version
-.ruff*
+*.bak
+*.swp
 
-__pycache__/
-
-*.pyz
+/help
+/recur
+/test/exit99
+/test/hello
+/test/wait
