build(readme): rename script
Its current name reflects the script's previous function.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -55,7 +55,7 @@ tasks:
     deps:
       - build-recur
     cmds:
-      - go run script/render_template.go
+      - go run script/update_readme.go
     status:
       - README.md
       - main.go
