--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 vars:
-  test_commands: |
+  TEST_HELPERS: |
     test/cat
     test/env
     test/exit99
@@ -32,72 +32,71 @@ tasks:
   build:
     desc: 'Build all components'
     deps:
-      - build-commands
-      - build-readme
+      - build:bin
+      - build:readme
 
-  build-commands:
-    desc: 'Build all commands'
+  build:bin:
+    desc: 'Build all binaries'
     deps:
-      - build-recur
-      - build-test-commands
+      - build:recur
+      - build:helpers
 
-  build-package:
+  build:package:
     desc: 'Build a single Go package'
     internal: true
-    dir: '{{.package}}'
+    dir: '{{.PACKAGE}}'
     cmds:
-      - go build -trimpath
+      - 'go build -trimpath # {{.PACKAGE}}'
 
-  build-readme:
+  build:readme:
     desc: 'Update the usage section in "README.md" with current help'
+    run: once
     deps:
-      - build-recur
+      - build:recur
     cmds:
       - go run ./script/readme ./recur --help
-    status:
+    sources:
       - main.go
-      - starlark.go
+      - script/readme/main.go
     generates:
       - README.md
 
-  build-recur:
-    desc: 'Build the recur command'
+  build:recur:
+    desc: 'Build the recur binary'
+    run: once
     cmds:
-      - task: build-package
+      - task: build:package
         vars:
-          package: .
+          PACKAGE: .
     sources:
       - main.go
       - starlark.go
     generates:
       - recur{{exeExt}}
 
-  build-test-commands:
-    desc: 'Build all test commands'
+  build:helpers:
+    desc: 'Build all test helpers'
+    run: once
     cmds:
-      - task: build-package
+      - task: build:package
         vars:
-          package: '{{.test_command}}'
+          PACKAGE: '{{.HELPER}}'
         for:
-          var: test_commands
-          as: test_command
+          var: TEST_HELPERS
+          as: HELPER
     sources:
       - test/**/*.go
-    generates:
-      - test/cat/cat{{exeExt}}
-      - test/env/env{{exeExt}}
-      - test/exit99/exit99{{exeExt}}
-      - test/hello/hello{{exeExt}}
-      - test/sleep/sleep{{exeExt}}
+    status:
+      - '{{range $i, $path := .TEST_HELPERS | trim | splitLines}}{{if $i}} && {{end}}test -f {{$path | shellQuote}}/{{$path | base | shellQuote}}{{exeExt}}{{end}}'
 
   clean:
     desc: 'Clean up binaries and generated files'
     cmds:
       - rm -f recur{{exeExt}}
-      - cmd: rm -f {{.test_command | shellQuote}}{{.test_command | base | shellQuote}}{{exeExt}}
+      - cmd: rm -f {{.HELPER | shellQuote}}/{{.HELPER | base | shellQuote}}{{exeExt}}
         for:
-          var: test_commands
-          as: test_command
+          var: TEST_HELPERS
+          as: HELPER
 
   lint:
     desc: 'Run golangci-lint'
@@ -107,13 +106,13 @@ tasks:
   release:
     desc: 'Prepare a release'
     deps:
-      - build-commands
+      - build:bin
     cmds:
       - VERSION=$(./recur{{exeExt}} --version) go run ./script/release
 
   test:
     desc: 'Run tests'
     deps:
-      - build-commands
+      - build:bin
     cmds:
       - go test
